<resources>
    <string name="app_name">KarlaFit</string>
    <string name="facebook_app_id">266634117237547</string>
    <string name="fb_login_protocol_scheme">fb266634117237547</string>
    <string name="iniciar">INICIAR SESIÓN</string>
    <string name="iniciar_facebook">INICIAR SESIÓN CON FACEBOOK</string>
    <string name="olvidaste">¿Has olvidado la contraseña?</string>
    <string name="email">Correo electrónico</string>
    <string name="terminos">Términos de uso de KarlaFit</string>
    <string name="pass">Contraseña</string>
    <string name="reto">INGRESAR AL RETO</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="msg_exit">Esta seguro que desea salir ?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="edit">Editar Datos</string>
    <string name="help">Ayuda</string>
    <string name="exit">Salir</string>
    <string name="opreto">Reto</string>
    <string name="opdieta">Dieta</string>
    <string name="opreceta">Recetas</string>
    <string name="facebook">FACEBOOK</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="semana">SEMANA 1</string>
    <string name="dias">5 horas de entrenamiento</string>
    <string name="libras">6 libras</string>
    <string name="recuperar">RECUPERAR</string>
    <string name="registro">REGÍSTRESE</string>
    <string name="fotoperfil">FOTO DE PERFIL</string>
    <string name="subir">Subir</string>
    <string name="peso">Peso</string>
    <string name="explicacion">Explicación del Reto</string>
    <string name="receta">Recetas</string>
    <string name="talla">Talla</string>
    <string name="edad">Edad</string>
    <string name="regis">Registro</string>
    <string name="default_notification_channel_id">10003</string>
    <string name="textview">TextView</string>
    <string name="error_pass">Ingrese su Contraseña</string>
    <string name="error_login_pass">Contraseña Incorrecta</string>
    <string name="ok">Aceptar</string>
    <string name="error_user">Un usuario con este correo electrónico ya existe</string>
    <string name="error_user_exite">Cuenta no existe, por favor regístrese</string>
    <string name="user_create">Usuario creado \n Por Favor Valide su email</string>
    <string name="user_create2">Usuario creado</string>
    <string name="valide_user">Por Favor Valide su email para poder ingresar</string>
    <string name="error_mail">Ingrese un Email Valido</string>
    <string name="permissions">La app necesita de permisos</string>
    <string name="restabler_msg">Esta opcion es solo para usuarios registrados via email !!!</string>
    <string name="auth">Cargando...</string>
    <string name="colorAccent">#e0006a</string>
    <string name="aceptar_terminos">Por favor acepte los términos y condiciones </string>

    <string name="error_name">Ingrese su nombre</string>
    <string name="error_apellido">Ingrese su apellido</string>
    <string name="error_email">Ingrese su email</string>
    <string name="cancelar">Cancelar</string>
    <string name="sd">Card</string>
    <string name="image">Seleccione una imagen</string>
    <string name="user_facebook">Usuario registrado con Facebook por favor logearse con este</string>
    <string name="error_internet">Por favor verifique se conexión de intertnet</string>
    <string name="msg_pago">Para poder ver las demas semanas es necesario que haga el pago!!!</string>
    <string name="Text_Payment_to">Pago de App</string>
    <string name="gracias_pago">Gracias por su pago!!!</string>
    <string name="prepara">Preparación</string>
    <string name="ingred">Ingredientes</string>
    <string name="comida">Comida saludable</string>
    <string name="consuma">Consuma 5 comidas al día</string>
    <string name="comidaext">A continuación encontrarás el plan alimenticio para este reto. Considera que todas las cinco comidas son obligatorias y recuerda comerlas todas a la hora adecuada.
</string>

    <string name="Lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>

</resources>
