<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIcons"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/semana"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:background="@drawable/ic_bg_dieta"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_action" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:padding="5dp"
                        app:srcCompat="@drawable/ic_icon_dieta" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitulo2"
                        style="@style/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comida"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtHoras"
                        style="@style/subTitle"
                        android:layout_height="wrap_content"
                        android:text="@string/consuma" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                        android:id="@+id/txtDescri"
                        style="@style/textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|right"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/comidaext" />
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>