<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".activity.MainActivity">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/DrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_collapseMode="parallax"
        tools:context=".activity.MainActivity">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbaruser"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                app:layout_collapseMode="pin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">

                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:visibility="gone"
                    tools:layout_editor_absoluteX="16dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="6dp">


                    <ImageButton
                        android:id="@+id/btnmenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:paddingRight="5dp"
                        app:srcCompat="@drawable/ic_menu" />

                </LinearLayout>


            </android.support.v7.widget.Toolbar>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/semanas_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintBottom_toTopOf="@+id/menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbaruser" />

            <LinearLayout
                android:id="@+id/menu"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txtReto"
                    style="@style/subTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/opreto"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtDieta"
                    style="@style/subTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/opdieta"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtReceta"
                    style="@style/subTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/opreceta"
                    android:textSize="24sp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerView_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/ic_bg_menu"
            android:scrollbars="vertical"
            tools:ignore="RtlHardcoded" />


    </android.support.v4.widget.DrawerLayout>

</android.support.constraint.ConstraintLayout>